cdk.out/HivemindPrism-Network.template.json
{
 "Description": "Hivemind-Prism Network Infrastructure - VPC, Subnets, and VPC Endpoints",
 "Resources": {
  "HivemindVpc63A10AFB": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.10.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/Resource"
   }
  },
  "HivemindVpcPublicSubnet1Subnet595DA15C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.10.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "HivemindPrism-Network/HivemindVpc/PublicSubnet1"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PublicSubnet1/Subnet"
   }
  },
  "HivemindVpcPublicSubnet1RouteTableA849C5AB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-Network/HivemindVpc/PublicSubnet1"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PublicSubnet1/RouteTable"
   }
  },
  "HivemindVpcPublicSubnet1RouteTableAssociation279E13C0": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HivemindVpcPublicSubnet1RouteTableA849C5AB"
    },
    "SubnetId": {
     "Ref": "HivemindVpcPublicSubnet1Subnet595DA15C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "HivemindVpcPublicSubnet1DefaultRoute71CE1587": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "HivemindVpcIGW5BC705E4"
    },
    "RouteTableId": {
     "Ref": "HivemindVpcPublicSubnet1RouteTableA849C5AB"
    }
   },
   "DependsOn": [
    "HivemindVpcVPCGWD2997AA7"
   ],
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "HivemindVpcPublicSubnet1EIP1AFE2783": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-Network/HivemindVpc/PublicSubnet1"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PublicSubnet1/EIP"
   }
  },
  "HivemindVpcPublicSubnet1NATGateway7062C7E7": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "HivemindVpcPublicSubnet1EIP1AFE2783",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "HivemindVpcPublicSubnet1Subnet595DA15C"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-Network/HivemindVpc/PublicSubnet1"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ]
   },
   "DependsOn": [
    "HivemindVpcPublicSubnet1DefaultRoute71CE1587",
    "HivemindVpcPublicSubnet1RouteTableAssociation279E13C0"
   ],
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PublicSubnet1/NATGateway"
   }
  },
  "HivemindVpcPublicSubnet2Subnet0590139A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.10.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "HivemindPrism-Network/HivemindVpc/PublicSubnet2"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PublicSubnet2/Subnet"
   }
  },
  "HivemindVpcPublicSubnet2RouteTableCF7671C5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-Network/HivemindVpc/PublicSubnet2"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PublicSubnet2/RouteTable"
   }
  },
  "HivemindVpcPublicSubnet2RouteTableAssociation28B1B8A5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HivemindVpcPublicSubnet2RouteTableCF7671C5"
    },
    "SubnetId": {
     "Ref": "HivemindVpcPublicSubnet2Subnet0590139A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "HivemindVpcPublicSubnet2DefaultRoute97B05E66": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "HivemindVpcIGW5BC705E4"
    },
    "RouteTableId": {
     "Ref": "HivemindVpcPublicSubnet2RouteTableCF7671C5"
    }
   },
   "DependsOn": [
    "HivemindVpcVPCGWD2997AA7"
   ],
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "HivemindVpcPrivateSubnet1Subnet5BE540C4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.10.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "HivemindPrism-Network/HivemindVpc/PrivateSubnet1"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PrivateSubnet1/Subnet"
   }
  },
  "HivemindVpcPrivateSubnet1RouteTable6760B120": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-Network/HivemindVpc/PrivateSubnet1"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PrivateSubnet1/RouteTable"
   }
  },
  "HivemindVpcPrivateSubnet1RouteTableAssociation9DBFFD90": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HivemindVpcPrivateSubnet1RouteTable6760B120"
    },
    "SubnetId": {
     "Ref": "HivemindVpcPrivateSubnet1Subnet5BE540C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "HivemindVpcPrivateSubnet1DefaultRoute94C8077C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "HivemindVpcPublicSubnet1NATGateway7062C7E7"
    },
    "RouteTableId": {
     "Ref": "HivemindVpcPrivateSubnet1RouteTable6760B120"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "HivemindVpcPrivateSubnet2Subnet3DF9DED0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.10.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "HivemindPrism-Network/HivemindVpc/PrivateSubnet2"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PrivateSubnet2/Subnet"
   }
  },
  "HivemindVpcPrivateSubnet2RouteTableC0CB98E2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-Network/HivemindVpc/PrivateSubnet2"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PrivateSubnet2/RouteTable"
   }
  },
  "HivemindVpcPrivateSubnet2RouteTableAssociationEA8285E1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HivemindVpcPrivateSubnet2RouteTableC0CB98E2"
    },
    "SubnetId": {
     "Ref": "HivemindVpcPrivateSubnet2Subnet3DF9DED0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "HivemindVpcPrivateSubnet2DefaultRoute7998389F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "HivemindVpcPublicSubnet1NATGateway7062C7E7"
    },
    "RouteTableId": {
     "Ref": "HivemindVpcPrivateSubnet2RouteTableC0CB98E2"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "HivemindVpcIsolatedSubnet1Subnet01ABE97E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.10.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "HivemindPrism-Network/HivemindVpc/IsolatedSubnet1"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/IsolatedSubnet1/Subnet"
   }
  },
  "HivemindVpcIsolatedSubnet1RouteTable0D338655": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-Network/HivemindVpc/IsolatedSubnet1"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/IsolatedSubnet1/RouteTable"
   }
  },
  "HivemindVpcIsolatedSubnet1RouteTableAssociationB6F4B831": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HivemindVpcIsolatedSubnet1RouteTable0D338655"
    },
    "SubnetId": {
     "Ref": "HivemindVpcIsolatedSubnet1Subnet01ABE97E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/IsolatedSubnet1/RouteTableAssociation"
   }
  },
  "HivemindVpcIsolatedSubnet2SubnetC3A23F9E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.10.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "HivemindPrism-Network/HivemindVpc/IsolatedSubnet2"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/IsolatedSubnet2/Subnet"
   }
  },
  "HivemindVpcIsolatedSubnet2RouteTableF7CBA305": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-Network/HivemindVpc/IsolatedSubnet2"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/IsolatedSubnet2/RouteTable"
   }
  },
  "HivemindVpcIsolatedSubnet2RouteTableAssociationD250D1E2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HivemindVpcIsolatedSubnet2RouteTableF7CBA305"
    },
    "SubnetId": {
     "Ref": "HivemindVpcIsolatedSubnet2SubnetC3A23F9E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/IsolatedSubnet2/RouteTableAssociation"
   }
  },
  "HivemindVpcIGW5BC705E4": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/IGW"
   }
  },
  "HivemindVpcVPCGWD2997AA7": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "HivemindVpcIGW5BC705E4"
    },
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/VPCGW"
   }
  },
  "HivemindVpcRestrictDefaultSecurityGroupCustomResourceC38F3672": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "HivemindVpc63A10AFB",
      "DefaultSecurityGroup"
     ]
    },
    "Account": {
     "Ref": "AWS::AccountId"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "HivemindVpcS3EndpointF1738A76": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "HivemindVpcPrivateSubnet1RouteTable6760B120"
     },
     {
      "Ref": "HivemindVpcPrivateSubnet2RouteTableC0CB98E2"
     },
     {
      "Ref": "HivemindVpcIsolatedSubnet1RouteTable0D338655"
     },
     {
      "Ref": "HivemindVpcIsolatedSubnet2RouteTableF7CBA305"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/S3Endpoint/Resource"
   }
  },
  "HivemindVpcDynamoDbEndpointA3A3E209": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "HivemindVpcPrivateSubnet1RouteTable6760B120"
     },
     {
      "Ref": "HivemindVpcPrivateSubnet2RouteTableC0CB98E2"
     },
     {
      "Ref": "HivemindVpcIsolatedSubnet1RouteTable0D338655"
     },
     {
      "Ref": "HivemindVpcIsolatedSubnet2RouteTableF7CBA305"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".dynamodb"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/DynamoDbEndpoint/Resource"
   }
  },
  "HivemindVpcEcrApiSecurityGroup6AD98DCE": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "HivemindPrism-Network/HivemindVpc/EcrApi/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "HivemindVpc63A10AFB",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "HivemindVpc63A10AFB",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/EcrApi/SecurityGroup/Resource"
   }
  },
  "HivemindVpcEcrApi9D0AB230": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "HivemindVpcEcrApiSecurityGroup6AD98DCE",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.ecr.api",
    "SubnetIds": [
     {
      "Ref": "HivemindVpcPrivateSubnet1Subnet5BE540C4"
     },
     {
      "Ref": "HivemindVpcPrivateSubnet2Subnet3DF9DED0"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/EcrApi/Resource"
   }
  },
  "HivemindVpcEcrDockerSecurityGroup7D50F6EC": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "HivemindPrism-Network/HivemindVpc/EcrDocker/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "HivemindVpc63A10AFB",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "HivemindVpc63A10AFB",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/EcrDocker/SecurityGroup/Resource"
   }
  },
  "HivemindVpcEcrDocker405B244D": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "HivemindVpcEcrDockerSecurityGroup7D50F6EC",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.ecr.dkr",
    "SubnetIds": [
     {
      "Ref": "HivemindVpcPrivateSubnet1Subnet5BE540C4"
     },
     {
      "Ref": "HivemindVpcPrivateSubnet2Subnet3DF9DED0"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/EcrDocker/Resource"
   }
  },
  "HivemindVpcCloudWatchLogsSecurityGroup7E0EB03A": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "HivemindPrism-Network/HivemindVpc/CloudWatchLogs/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "HivemindVpc63A10AFB",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "HivemindVpc63A10AFB",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/CloudWatchLogs/SecurityGroup/Resource"
   }
  },
  "HivemindVpcCloudWatchLogs2E158E32": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "HivemindVpcCloudWatchLogsSecurityGroup7E0EB03A",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.logs",
    "SubnetIds": [
     {
      "Ref": "HivemindVpcPrivateSubnet1Subnet5BE540C4"
     },
     {
      "Ref": "HivemindVpcPrivateSubnet2Subnet3DF9DED0"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/CloudWatchLogs/Resource"
   }
  },
  "HivemindVpcSecretsManagerSecurityGroup23612D9C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "HivemindPrism-Network/HivemindVpc/SecretsManager/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "HivemindVpc63A10AFB",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "HivemindVpc63A10AFB",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/SecretsManager/SecurityGroup/Resource"
   }
  },
  "HivemindVpcSecretsManagerD03BB291": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "HivemindVpcSecretsManagerSecurityGroup23612D9C",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.secretsmanager",
    "SubnetIds": [
     {
      "Ref": "HivemindVpcPrivateSubnet1Subnet5BE540C4"
     },
     {
      "Ref": "HivemindVpcPrivateSubnet2Subnet3DF9DED0"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/SecretsManager/Resource"
   }
  },
  "HivemindVpcStsSecurityGroupDC027C45": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "HivemindPrism-Network/HivemindVpc/Sts/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "HivemindVpc63A10AFB",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "HivemindVpc63A10AFB",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/Sts/SecurityGroup/Resource"
   }
  },
  "HivemindVpcSts3A76C1A1": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "HivemindVpcStsSecurityGroupDC027C45",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.sts",
    "SubnetIds": [
     {
      "Ref": "HivemindVpcPrivateSubnet1Subnet5BE540C4"
     },
     {
      "Ref": "HivemindVpcPrivateSubnet2Subnet3DF9DED0"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/Sts/Resource"
   }
  },
  "HivemindVpcStepFunctionsSecurityGroup7594477B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "HivemindPrism-Network/HivemindVpc/StepFunctions/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "HivemindVpc63A10AFB",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "HivemindVpc63A10AFB",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/StepFunctions/SecurityGroup/Resource"
   }
  },
  "HivemindVpcStepFunctionsF2D892F2": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "HivemindVpcStepFunctionsSecurityGroup7594477B",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.states",
    "SubnetIds": [
     {
      "Ref": "HivemindVpcPrivateSubnet1Subnet5BE540C4"
     },
     {
      "Ref": "HivemindVpcPrivateSubnet2Subnet3DF9DED0"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/StepFunctions/Resource"
   }
  },
  "HivemindVpcEventBridgeSecurityGroup1AA0AC91": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "HivemindPrism-Network/HivemindVpc/EventBridge/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "HivemindVpc63A10AFB",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "HivemindVpc63A10AFB",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/EventBridge/SecurityGroup/Resource"
   }
  },
  "HivemindVpcEventBridgeB9B6D141": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "HivemindVpcEventBridgeSecurityGroup1AA0AC91",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.events",
    "SubnetIds": [
     {
      "Ref": "HivemindVpcPrivateSubnet1Subnet5BE540C4"
     },
     {
      "Ref": "HivemindVpcPrivateSubnet2Subnet3DF9DED0"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/EventBridge/Resource"
   }
  },
  "HivemindVpcSnsSecurityGroupCFAD3FEF": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "HivemindPrism-Network/HivemindVpc/Sns/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "HivemindVpc63A10AFB",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "HivemindVpc63A10AFB",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/Sns/SecurityGroup/Resource"
   }
  },
  "HivemindVpcSns0927B97E": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "HivemindVpcSnsSecurityGroupCFAD3FEF",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.sns",
    "SubnetIds": [
     {
      "Ref": "HivemindVpcPrivateSubnet1Subnet5BE540C4"
     },
     {
      "Ref": "HivemindVpcPrivateSubnet2Subnet3DF9DED0"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/Sns/Resource"
   }
  },
  "HivemindVpcKmsSecurityGroup9E9BC97D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "HivemindPrism-Network/HivemindVpc/Kms/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "HivemindVpc63A10AFB",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "HivemindVpc63A10AFB",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/Kms/SecurityGroup/Resource"
   }
  },
  "HivemindVpcKmsC11180EF": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "HivemindVpcKmsSecurityGroup9E9BC97D",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.kms",
    "SubnetIds": [
     {
      "Ref": "HivemindVpcPrivateSubnet1Subnet5BE540C4"
     },
     {
      "Ref": "HivemindVpcPrivateSubnet2Subnet3DF9DED0"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/Kms/Resource"
   }
  },
  "HivemindVpcBedrockRuntimeSecurityGroupB3A47095": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "HivemindPrism-Network/HivemindVpc/BedrockRuntime/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "HivemindVpc63A10AFB",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "HivemindVpc63A10AFB",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/BedrockRuntime/SecurityGroup/Resource"
   }
  },
  "HivemindVpcBedrockRuntimeE7F992F6": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "HivemindVpcBedrockRuntimeSecurityGroupB3A47095",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.bedrock-runtime",
    "SubnetIds": [
     {
      "Ref": "HivemindVpcPrivateSubnet1Subnet5BE540C4"
     },
     {
      "Ref": "HivemindVpcPrivateSubnet2Subnet3DF9DED0"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/BedrockRuntime/Resource"
   }
  },
  "HivemindVpcCloudWatchMonitoringSecurityGroupE15A20D1": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "HivemindPrism-Network/HivemindVpc/CloudWatchMonitoring/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "HivemindVpc63A10AFB",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "HivemindVpc63A10AFB",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/CloudWatchMonitoring/SecurityGroup/Resource"
   }
  },
  "HivemindVpcCloudWatchMonitoringCDC3AF49": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "HivemindVpcCloudWatchMonitoringSecurityGroupE15A20D1",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.monitoring",
    "SubnetIds": [
     {
      "Ref": "HivemindVpcPrivateSubnet1Subnet5BE540C4"
     },
     {
      "Ref": "HivemindVpcPrivateSubnet2Subnet3DF9DED0"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/CloudWatchMonitoring/Resource"
   }
  },
  "HivemindVpcXRaySecurityGroup604EE429": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "HivemindPrism-Network/HivemindVpc/XRay/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "HivemindVpc63A10AFB",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "HivemindVpc63A10AFB",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/XRay/SecurityGroup/Resource"
   }
  },
  "HivemindVpcXRayC33C71A7": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "HivemindVpcXRaySecurityGroup604EE429",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.xray",
    "SubnetIds": [
     {
      "Ref": "HivemindVpcPrivateSubnet1Subnet5BE540C4"
     },
     {
      "Ref": "HivemindVpcPrivateSubnet2Subnet3DF9DED0"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "HivemindPrism-VPC"
     },
     {
      "Key": "SecurityLevel",
      "Value": "High"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "HivemindVpc63A10AFB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/HivemindVpc/XRay/Resource"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:",
             {
              "Ref": "AWS::AccountId"
             },
             ":security-group/",
             {
              "Fn::GetAtt": [
               "HivemindVpc63A10AFB",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-us-east-1"
     },
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/22QwW7CMAyGn4V7mrGIFwCEEBcWtRNXlKaGGVqnSpwihHj3pdBRDjv595c/1m8rqdRUTifmEjJbnbMaS3kr2NizSGgPVsnbrrVieaCdXgodyxptEUsC7tmochcZvk1Zw8hHNg/BWTSMjl7mXqw2ui9bw2vDcDFXoT12SY6DN8Tgk/4zPJMM3ZxT1J8GiMVAUtgVVa1D4sH6ah+TDsbCu6cAGz3yde1dbB/R38Fd5BBc9DaljYFdM7Zpi/+ftHcdVuAXJoBIiwOnex6Rjv2fr8ht5LsgV4E8hY9OzeRMfk5OATHzkRgbkPmz/gKnKKgEnAEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "HivemindPrism-Network/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Description": "VPC ID for Hivemind-Prism",
   "Value": {
    "Ref": "HivemindVpc63A10AFB"
   },
   "Export": {
    "Name": "HivemindPrism-VpcId"
   }
  },
  "VpcCidr": {
   "Description": "VPC CIDR block",
   "Value": {
    "Fn::GetAtt": [
     "HivemindVpc63A10AFB",
     "CidrBlock"
    ]
   }
  },
  "ExportsOutputRefHivemindVpc63A10AFB0D723A0E": {
   "Value": {
    "Ref": "HivemindVpc63A10AFB"
   },
   "Export": {
    "Name": "HivemindPrism-Network:ExportsOutputRefHivemindVpc63A10AFB0D723A0E"
   }
  },
  "ExportsOutputRefHivemindVpcPrivateSubnet1Subnet5BE540C434344ABF": {
   "Value": {
    "Ref": "HivemindVpcPrivateSubnet1Subnet5BE540C4"
   },
   "Export": {
    "Name": "HivemindPrism-Network:ExportsOutputRefHivemindVpcPrivateSubnet1Subnet5BE540C434344ABF"
   }
  },
  "ExportsOutputRefHivemindVpcPrivateSubnet2Subnet3DF9DED022A86747": {
   "Value": {
    "Ref": "HivemindVpcPrivateSubnet2Subnet3DF9DED0"
   },
   "Export": {
    "Name": "HivemindPrism-Network:ExportsOutputRefHivemindVpcPrivateSubnet2Subnet3DF9DED022A86747"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
